# mess

./: LICENSE.txt  README.md  pyproject.toml  snapcraft.yaml  test.file.mess
src/mess/: __about__.py  __init__.py  id_generator.py  main.py  manage_requirements.py  security.py
tests/: __init__.py
